--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'com.android.application'
 
 
 android {
-  namespace "io.github.a"
+  namespace "com.ee"
   compileSdk 35
   sourceSets {
     main {
@@ -31,7 +31,7 @@ android {
 		}
   }
   defaultConfig {
-    applicationId 'io.github.a'
+    applicationId 'com.ee'
     minSdkVersion 21
     targetSdkVersion 35
     versionCode 1
@@ -119,7 +119,7 @@ tasks.register('run', Exec) {
   }
 
   def adb = path + "/platform-tools/adb"
-  commandLine "$adb", 'shell', 'am', 'start', '-n', 'io.github.a/io.github.a.android.AndroidLauncher'
+  commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.ee/com.ee.android.AndroidLauncher'
 }
 
 eclipse.project.name = appName + "-android"
